message Transmission {
  required int32 id = 1; 
  required int32 code = 2;
  required int64 value = 3;
  repeated RegionDiffProto diff_info = 5;
}

message RegionDiffProto {
  required int64 start_address = 1;
  repeated DiffSegment diffs = 2;
}

message DiffSegment {
  required uint32 length = 1;
  required uint32 new_data = 2;
}
